@@ -1,6 +1,12 @@
 2000-08-31  Tor Lillqvist  <tml@iki.fi>
 
 	* glib.h
+	* glib.def
+	* giowin32.c (g_io_channel_win32_make_pollfd): New function, to
+	make a GPollFD from a GIOChannel. Creates the events and starts
+	the reader thread if necessary.
+
+	* glib.h
 	* giowin32.c (g_io_channel_win32_poll): No use for separate
 	condition parameter.
 
